# NostrMarketMCP

./: .cursor.json  .gitignore  AWS_DEPLOYMENT.md  Dockerfile  Dockerfile-database  Dockerfile-mcp  OPENAI_INTEGRATION.md  README.md  SECURITY_IMPLEMENTATION.md  SECURITY_INCIDENT_RESPONSE.md  SECURITY_RESPONSE.md  config.env.example  debug_db.py  docker-compose-api.yml  docker-compose.yml  inspect_database.py  nostr_profiles_mcp_server.py  openai_actions_schema.yaml  openai_api_server.py  profiles.db  pyproject.toml  requirements-docker.txt  requirements.txt  run_api_server.py  run_mcp_integration_tests.py  run_mcp_server.py  secure_openai_api_server.py  security.py  security_audit.sh  security_simple.py  shared_database.py  simple_secure_server.py  task-definition-api.json  task-definition-database.json  task-definition-mcp.json  task-definition.json  test.db
docs/: API_TESTING_GUIDE.md  Architecture.md  api-client-guide.md  api-specification.yaml  index.md
nostr_market_mcp/: __init__.py  __main__.py  db.py  ingest.py  server.py
scripts/: run_api_server.py  run_api_service.py  run_database_service.py  run_mcp_server.py  run_mcp_service.py  test_docker_local.sh
tests/: MCP_TESTING_GUIDE.md  README.md  __init__.py  conftest.py  run_all_local_tests.sh  run_api_local_tests.sh  run_aws_api_test.sh  run_chat_test.sh  run_database_local_tests.sh  run_mcp_local_tests.sh  run_mcp_tests.py  run_tests.py  test_api_endpoints.py  test_api_integration.py  test_api_service_aws.py  test_api_service_local.py  test_chat_local.py  test_chat_local.sh  test_database_service_aws.py  (+7 more)
(+51 files in other folders)
